# MC-Vector

./: .envrc  .gitattributes  .gitignore  .prettierignore  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  biome.jsonc  flake.nix  justfile  lint-staged.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mts  shell.nix  tsconfig.app.json  vite.config.ts
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  update-versions.yml
docs/: Discord_webhook_setup.md  README.md  architecture.md  development-environment-research.md  development-guide.md  engineering-requirements.md  improvements.md  next-phase-plan.md  react-best-practices-audit.md  security-audit-report-2026-04-11.md  tutorial.md  ui-fix-log-2026-04-15.md  ui-regression-fix-log-2026-04-14.md  ui-regression-research-2026-04-14.md  ui-research-2026-04-15.md  ui-ux-pro-max-plan.md  update-versions_implementation_guide.md  updater-recovery-runbook.md  技術スタック.md  技術スタック_slides.md
scripts/: cargo-optional.mjs  install-extensions.mjs  install-extensions.sh  release-publish.mjs  release-tag.mjs  update-versions.js  update-versions.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: file_utils.rs  mod.rs  ngrok.rs  perf.rs  security.rs  server.rs
src/i18n/: index.ts  types.ts
src/lib/: backup-commands.ts  config-commands.ts  file-commands.ts  java-commands.ts  ngrok-commands.ts  tauri-api.ts  (+6 more)
(+108 files in other folders)
