[package]
name = "mc-vector"
version = "2.0.51"
description = "Minecraft Server Management App"
authors = ["tukuyomi032"]
license = "MIT"
repository = "https://github.com/tukuyomil032/MC-Vector"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

# カスタムコマンド用
tokio = { version = "1", features = ["full"] }
sysinfo = "0.33"
zip = "2"
tar = "0.4"
flate2 = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "linux")'.dependencies]
# Limit glib to Linux targets to avoid needing glib dev packages on macOS/Windows runners
glib = "0.20"
